GC log shows TB heap usage on CI is normal - print some stats about the rspec GC usage